# SocialNetSim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
ai/: __init__.py  embeddings.py  evaluation.py  experiment_logger.py  features.py  graph_features.py  temporal_features.py
ai/trainers/: __init__.py  base_trainer.py  churn_predictor.py  misinfo_detector.py  virality_predictor.py
config/: __init__.py  base.yaml  schemas.py
config/scenarios/: default.yaml  echo_chamber.yaml  misinformation.yaml
data/: __init__.py  logger.py  state_manager.py  training_data.py
docker/: Dockerfile  docker-compose.yaml
docs/: algorithms.md
engine/: __init__.py  batch_processor.py  cascade.py  decision_model.py  diffusion.py  engagement.py  events.py  feed.py  hawkes.py  memory_manager.py  metrics.py  moderation.py  opinion_dynamics.py  ranking_optimization.py  simulation.py  state.py  vectorized_ops.py
generator/: __init__.py  content_generator.py  distributions.py  network_generator.py  topic_generator.py  user_generator.py  world.py
models/: __init__.py  enums.py  event.py  interaction.py  post.py  user.py
scenarios/: __init__.py  comparator.py  experiment.py  presets.py
scripts/: generate_world.py  run_simulation.py  train_models.py
tests/: conftest.py  stress_test.py  validation.py
tests/test_ai/: test_features.py  test_trainers.py
tests/test_engine/: test_cascade.py  test_engagement.py  test_feed.py  test_simulation.py
tests/test_generator/: test_distributions.py  test_world.py
ui/: __init__.py  app.py  state.py
ui/components/: __init__.py  charts.py  controls.py
ui/pages/: __init__.py  page_ai_models.py  page_cascades.py  page_experiments.py  page_metrics.py  page_network.py  page_simulation.py
