[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialnetsim"
version = "1.0.0"
description = "AI-powered synthetic social network and virality simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SocialNetSim Team"}
]
keywords = [
    "social-network",
    "simulation",
    "virality",
    "machine-learning",
    "network-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "networkx>=3.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "streamlit>=1.29",
    "plotly>=5.18",
    "pyvis>=0.3.2",
    "tqdm>=4.66",
    "loguru>=0.7",
    "click>=8.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
socialnetsim = "scripts.run_simulation:main"
socialnetsim-ui = "ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "models*", "generator*", "engine*", "ai*", "scenarios*", "ui*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
